--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "PyeongChangPeace-Bold";
   src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/PyeongChangPeace-Bold.woff2")
@@ -48,6 +49,7 @@ header {
   box-sizing: border-box;
   position: fixed;
   z-index: 999;
+  position: relative;
 }
 /* header logo */
 header .logo h1 {
@@ -62,6 +64,49 @@ header .line01 {
 /* header bar */
 header .bar {
   font-size: 3vw;
+}
+/* header modal_menu */
+header .modal_menu {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(10px);
+  /* display: none; */
+  /* align-items: center;
+  flex-direction: column;
+  justify-content: center; */
+}
+header .modal_menu .mo_menu {
+  font-size: 2.5vw;
+}
+header .modal_menu .mo_menu > li a {
+  display: inline-block;
+  padding: 2rem 0rem;
+  color: #222;
+  transition: 0.5s;
+}
+/* header menu hover*/
+header .modal_menu .mo_menu > li a:hover {
+  color: #fff;
+}
+/*header close */
+header .close {
+  color: #fff;
+  position: absolute;
+  right: 3%;
+  top: 15px;
+  font-size: 2.5rem;
+  color: #222;
+}
+/* header addClass */
+header.on {
+  background-color: #98212b;
+}
+header .bar.on {
+  color: #fff;
 }
 /*con01*/
 .con01 {
