--- a/css/style.css
+++ b/css/style.css
@@ -74,10 +74,11 @@ header .modal_menu {
   top: 0px;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(10px);
-  /* display: none; */
-  /* align-items: center;
+  display: none;
+
+  align-items: center;
   flex-direction: column;
-  justify-content: center; */
+  justify-content: center;
 }
 header .modal_menu .mo_menu {
   font-size: 2.5vw;
@@ -87,10 +88,11 @@ header .modal_menu .mo_menu > li a {
   padding: 2rem 0rem;
   color: #222;
   transition: 0.5s;
+  font-weight: 600;
 }
 /* header menu hover*/
 header .modal_menu .mo_menu > li a:hover {
-  color: #fff;
+  color: #217af4;
 }
 /*header close */
 header .close {
