--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,7 @@ header {
   padding: 2rem 6rem;
   box-sizing: border-box;
   position: fixed;
-  z-index: 999;
-  position: relative;
+  z-index: 50;
 }
 /* header logo */
 header .logo h1 {
@@ -79,6 +78,7 @@ header .modal_menu {
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  z-index: 1000;
 }
 header .modal_menu .mo_menu {
   font-size: 2.5vw;
@@ -103,13 +103,7 @@ header .close {
   font-size: 2.5rem;
   color: #222;
 }
-/* header addClass */
-header.on {
-  background-color: #98212b;
-}
-header .bar.on {
-  color: #fff;
-}
+
 /*con01*/
 .con01 {
   width: 100%;
@@ -152,8 +146,9 @@ header .bar.on {
 }
 /*con01 web */
 #con01 .web {
+  width: 20%;
   position: absolute;
-  left: 8%;
+  left: 6%;
   top: 75%;
 
   animation: ani01 1s linear infinite;
@@ -178,7 +173,7 @@ header .bar.on {
   }
 }
 #con01 .web img {
-  width: 150%;
+  width: 100%;
 }
 /*con01 work  */
 #con01 .work {
@@ -251,7 +246,7 @@ header .bar.on {
 #con02 {
   width: 90%;
   height: 100vh;
-
+  padding-top: 2rem;
   box-sizing: border-box;
   margin: 0px auto;
 }
@@ -320,7 +315,7 @@ header .bar.on {
 /*con02 left textBox   */
 #con02 .left .textBox {
   width: 95%;
-  height: 280px;
+  height: 25vh;
   border: 2px solid #222;
   padding: 1.5rem;
   box-sizing: border-box;
@@ -346,6 +341,7 @@ header .bar.on {
 #con02 .right {
   width: 40%;
   position: relative;
+  margin-top: 50px;
 }
 /* con02 hi */
 #con02 .right .hi {
@@ -354,6 +350,7 @@ header .bar.on {
   right: 80px;
   top: -30px;
   animation: ani03 1s linear infinite;
+  z-index: 20;
 }
 @keyframes ani03 {
   0% {
@@ -442,19 +439,19 @@ header .bar.on {
 }
 /*con03 bg  */
 #con03 .bg {
-  width: 350px;
+  width: 20%;
   position: absolute;
   left: -100px;
-  top: 100px;
+  top: -30px;
 }
 #con03 .bg img {
   width: 100%;
 }
 /* con03 profile */
 #con03 .profile {
-  width: 900px;
+  width: 55%;
   margin: 0px auto;
-  padding-top: 100px;
+  padding-top: 70px;
   box-sizing: border-box;
   transform: rotate(-5deg);
   margin-bottom: 20px;
@@ -464,10 +461,10 @@ header .bar.on {
 }
 /* con03 bg01 */
 #con03 .bg01 {
-  width: 320px;
+  width: 17%;
   position: absolute;
   right: -3%;
-  top: 12%;
+  top: 8%;
 }
 #con03 .bg01 img {
   width: 100%;
@@ -496,18 +493,18 @@ header .bar.on {
   margin: 0px auto;
 }
 #con03 .profileTop > li h3 {
-  font-size: 3rem;
+  font-size: 2.5vw;
   font-family: "PyeongChangPeace-Bold";
   text-align: center;
   margin-bottom: 50px;
 }
 #con03 .profileTop > li h2 {
-  font-size: 3rem;
+  font-size: 2.5vw;
   font-family: "PyeongChangPeace-Bold";
   text-align: center;
 }
 #con03 .profileTop > li p {
-  font-size: 1.5rem;
+  font-size: 1.4vw;
   margin-bottom: 1rem;
   position: relative;
   margin-left: 50px;
@@ -527,18 +524,18 @@ header .bar.on {
 }
 /* con03 profileTop > li education */
 #con03 .profileTop > li .education {
-  width: 280px;
+  width: 45%;
   position: absolute;
   left: -100px;
   top: -25%;
-  transform: rotate(5deg);
+  transform: rotate(-5deg);
 }
 #con03 .profileTop > li .education img {
   width: 100%;
 }
 /*con03 profileTop > li skill  */
 #con03 .profileTop > li .skill {
-  width: 190px;
+  width: 30%;
   position: absolute;
   right: -70px;
   top: -70px;
@@ -547,7 +544,7 @@ header .bar.on {
   width: 100%;
 }
 #con03 .profileTop > li:nth-child(2) > img {
-  width: 400px;
+  width: 65%;
   margin: 0px auto;
   display: block;
 }
@@ -573,20 +570,24 @@ header .bar.on {
 }
 /*con03 profileBottom li career */
 #con03 .profileBottom > li .career {
+  width: 30%;
   position: absolute;
   right: -50px;
   top: -50px;
 }
+#con03 .profileBottom > li .career img {
+  width: 100%;
+}
 /*con03 profileBottom li h3 */
 #con03 .profileBottom > li h3 {
-  font-size: 3rem;
+  font-size: 2.5vw;
   font-family: "PyeongChangPeace-Bold";
   text-align: center;
   margin-bottom: 1rem;
 }
 /*con03 profileBottom li p */
 #con03 .profileBottom > li p {
-  font-size: 1.5rem;
+  font-size: 1.2vw;
   margin-bottom: 1rem;
   position: relative;
   margin-left: 50px;
@@ -610,9 +611,91 @@ header .bar.on {
 }
 /*con03 profileBottom li certificate */
 #con03 .profileBottom > li .certificate {
+  width: 35%;
   position: absolute;
   left: -60px;
   top: -10px;
+}
+#con03 .profileBottom > li .certificate img {
+  width: 100%;
+}
+/* con03 .profileBottom > li .txtBox03 */
+#con03 .profileBottom > li .txtBox03 {
+  position: relative;
+}
+/* con03 .profileBottom > li .txtBox03 img  */
+#con03 .profileBottom > li .txtBox03 img {
+  width: 14%;
+  position: absolute;
+  right: 17%;
+  top: -340%;
+
+  animation: ani07 5s linear infinite;
+  cursor: pointer;
+}
+@keyframes ani07 {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/* 모달창 */
+#con03 .modalCareer {
+  width: 100%;
+  position: absolute;
+  left: 10%;
+  top: 10%;
+  display: none;
+}
+#con03 .scrollBar {
+  width: 80%;
+
+  height: 83vh;
+  overflow-y: scroll;
+}
+
+#con03 .scrollBar::-webkit-scrollbar {
+  width: 12px;
+}
+#con03 .scrollBar::-webkit-scrollbar-button {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 20px;
+}
+/* 위쪽 버튼 (스크롤 업) */
+#con03 .scrollBar::-webkit-scrollbar-button:vertical:start {
+  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23217af4"><path d="M7 14l5-5 5 5z"/></svg>');
+}
+
+/* 아래쪽 버튼 (스크롤 다운) */
+#con03 .scrollBar::-webkit-scrollbar-button:vertical:end {
+  background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23217af4"><path d="M7 10l5 5 5-5z"/></svg>');
+}
+
+#con03 .scrollBar::-webkit-scrollbar-thumb {
+  height: 30%; /* 스크롤바의 길이 */
+  background: #217af4; /* 스크롤바의 색상 */
+
+  border-radius: 10px;
+}
+
+#con03 .scrollBar::-webkit-scrollbar-track {
+  background: rgba(33, 122, 244, 0.1); /*스크롤바 뒷 배경 색상*/
+}
+
+#con03 .modalCareer img {
+  width: 100%;
+}
+#con03 .modalCareer .close {
+  font-size: 3vw;
+  position: absolute;
+  right: 30px;
+  top: 0px;
+  color: #222;
 }
 
 /* con04 */
@@ -801,7 +884,6 @@ header .bar.on {
   height: 100vh;
   color: #fff;
   position: relative;
-  z-index: 1000;
 }
 /*con05  title  */
 #con05 .title {
@@ -1099,7 +1181,7 @@ header .bar.on {
   right: -150px;
   top: 100px;
   transform: rotate(30deg);
-  z-index: 50;
+  z-index: 10;
 }
 #con06 .bg08 img {
   width: 100%;
@@ -1204,7 +1286,78 @@ header .bar.on {
     width: 60%;
     position: absolute;
     left: -100px;
-    top: 400px;
+    top: 100px;
+  }
+  /* con03 */
+  #con03 {
+    width: 100%;
+    height: 700px;
+  }
+  /*con03 profileTop*/
+  #con03 .profileTop {
+    width: 80%;
+  }
+  /*con03 profileTop li*/
+  #con03 .profileTop > li {
+    height: 25vh;
+    padding: 0.5rem;
+  }
+  #con03 .profileTop > li h3 {
+    font-size: 3vw;
+
+    margin-bottom: 30px;
+  }
+  #con03 .profileTop > li h2 {
+    font-size: 3vw;
+    margin-bottom: 0.5rem;
+  }
+  /* con03 profileTop > li education */
+  #con03 .profileTop > li .education {
+    width: 50%;
+    left: -55px;
+    top: -30%;
+  }
+  /*con03 profileTop > li skill  */
+  #con03 .profileTop > li .skill {
+    right: -50px;
+    top: -40px;
+  }
+  /*con03 profileBottom  */
+  #con03 .profileBottom {
+    width: 80%;
+  }
+  /*con03 profileBottom  */
+  #con03 .profileBottom > li {
+    height: 15vh;
+
+    padding: 0.5rem;
+  }
+  /*con03 profileBottom li h3 */
+  #con03 .profileBottom > li h3 {
+    font-size: 3vw;
+  }
+  /*con03 profileBottom li p */
+  #con03 .profileBottom > li p {
+    font-size: 1.5vw;
+
+    margin-left: 25px;
+    margin-top: 30px;
+  }
+  /*con03 profileBottom li text01 */
+  #con03 .profileBottom > li .text01 {
+    margin-left: 100px;
+  }
+  /*con03 profileBottom li career */
+  #con03 .profileBottom > li .career {
+    width: 35%;
+    right: -40px;
+  }
+  /*con03 profileBottom li certificate */
+  #con03 .profileBottom > li .certificate {
+    width: 35%;
+    position: absolute;
+    left: -50px;
+    top: 10px;
   }
 }
 @media (max-width: 950px) {
@@ -1249,7 +1402,67 @@ header .bar.on {
   }
   #con02 {
     width: 95%;
-    transform: translateY(50px);
+    transform: translateY(0px);
+  }
+  #con02 .left .textBox .text {
+    font-size: 1.9vw;
+  }
+  /* con03 */
+  #con03 {
+    width: 100%;
+    height: 700px;
+    background-color: #ddb0b4;
+  }
+  /*con03 profileTop*/
+  #con03 .profileTop {
+    width: 90%;
+  }
+  /*con03 profileTop li*/
+  #con03 .profileTop > li {
+    height: 23vh;
+    padding: 0.5rem;
+  }
+  #con03 .profileTop > li h3 {
+    font-size: 3.5vw;
+
+    margin-bottom: 30px;
+  }
+  #con03 .profileTop > li h2 {
+    font-size: 3.5vw;
+    margin-bottom: 0.5rem;
+  }
+
+  /*con03 profileBottom  */
+  #con03 .profileBottom {
+    width: 90%;
+  }
+  /*con03 profileBottom  */
+  #con03 .profileBottom > li {
+    height: 15vh;
+
+    padding: 0.5rem;
+  }
+  /*con03 profileBottom li h3 */
+  #con03 .profileBottom > li h3 {
+    font-size: 3vw;
+  }
+  /*con03 profileBottom li p */
+  #con03 .profileBottom > li p {
+    font-size: 1.7vw;
+
+    margin-top: 20px;
+  }
+  /*con03 profileBottom li text01 */
+  #con03 .profileBottom > li .text01 {
+    margin-left: 80px;
+  }
+  /*con03 profileBottom li career */
+  #con03 .profileBottom > li .career {
+    width: 40%;
+  }
+  /*con03 profileBottom li certificate */
+  #con03 .profileBottom > li .certificate {
+    width: 40%;
   }
 }
 @media (max-width: 800px) {
@@ -1305,9 +1518,14 @@ header .bar.on {
     font-size: 2vw;
   }
   #con02 {
-    transform: translateY(20px);
+    transform: translateY(0px);
     height: 1200px;
   }
+
+  #con02 .left .textBox .text {
+    font-size: 2.3vw;
+  }
+
   /*con02 .aboutWrap*/
   #con02 .aboutWrap {
     display: block;
@@ -1368,6 +1586,80 @@ header .bar.on {
   #con02 .bottom {
     width: 100%;
     transform: translateY(100px);
+  }
+  /* con03 */
+  #con03 {
+    width: 100%;
+    height: 650px;
+    background-color: #ddb0b4;
+  }
+  /*con03 bg  */
+  #con03 .bg {
+    position: absolute;
+    left: -10px;
+    top: 0px;
+  }
+  #con03 .profileTop > li p {
+    font-size: 1.7vw;
+    margin-left: 30px;
+  }
+  /*con03 profileTop*/
+  #con03 .profileTop {
+    width: 90%;
+  }
+  /*con03 profileTop li*/
+  #con03 .profileTop > li {
+    height: 20vh;
+  }
+  /* con03 profileTop > li education */
+  #con03 .profileTop > li .education {
+    width: 50%;
+
+    left: -45px;
+    top: -30%;
+  }
+  /*con03 profileTop > li skill  */
+  #con03 .profileTop > li .skill {
+    width: 35%;
+
+    right: -45px;
+    top: -40px;
+  }
+
+  /*con03 profileBottom  */
+  #con03 .profileBottom {
+    width: 90%;
+  }
+  /*con03 profileBottom  */
+  #con03 .profileBottom > li {
+    height: 13vh;
+
+    padding: 0.5rem;
+  }
+  /*con03 profileBottom li h3 */
+  #con03 .profileBottom > li h3 {
+    font-size: 3vw;
+  }
+  /*con03 profileBottom li p */
+  #con03 .profileBottom > li p {
+    font-size: 1.7vw;
+
+    margin-top: 20px;
+  }
+  /*con03 profileBottom li text01 */
+  #con03 .profileBottom > li .text01 {
+    margin-left: 50px;
+  }
+  /*con03 profileBottom li career */
+  #con03 .profileBottom > li .career {
+    width: 45%;
+    top: -40px;
+  }
+  /*con03 profileBottom li certificate */
+  #con03 .profileBottom > li .certificate {
+    width: 45%;
+    left: -30px;
+    top: 20px;
   }
 }
 
@@ -1438,6 +1730,126 @@ header .bar.on {
     margin-left: 2rem;
     font-size: 2vw;
   }
+  /* con02 */
+  #con02 {
+    transform: translateY(-50px);
+    height: 1100px;
+  }
+  /* con02 aboutWrap left */
+  #con02 .aboutWrap .left {
+    padding: 1rem;
+  }
+  /* con02 left aboutMe design */
+  #con02 .left .aboutMe .design {
+    width: 50%;
+    left: 25%;
+    top: 20%;
+  }
+  /* con02 hi */
+  #con02 .right .hi {
+    top: 30px;
+  }
+  /*con02 left textBox   */
+  #con02 .left .textBox .text {
+    font-size: 2.8vw;
+  }
+  /*con02 bottom  p */
+  #con02 .bottom p {
+    margin-left: 1rem;
+    font-size: 1.9vw;
+  }
+
+  /* con03 */
+  #con03 {
+    height: 1150px;
+  }
+  /* con03 profile */
+  #con03 .profile {
+    width: 70%;
+  }
+  /*con03 profileTop*/
+  #con03 .profileTop {
+    width: 100%;
+    display: block;
+    margin: 0px auto;
+  }
+  /*con03 profileTop li*/
+  #con03 .profileTop > li {
+    width: 80%;
+
+    height: 25vh;
+
+    padding: 1rem;
+    margin: 2.5rem auto;
+  }
+  #con03 .profileTop > li h3 {
+    font-size: 5vw;
+
+    margin-bottom: 30px;
+  }
+  #con03 .profileTop > li h2 {
+    font-size: 5vw;
+  }
+  #con03 .profileTop > li p {
+    font-size: 3vw;
+    margin-bottom: 1rem;
+    margin-left: 60px;
+  }
+  /* con03 profileTop > li education */
+  #con03 .profileTop > li .education {
+    left: -60px;
+    top: -30%;
+  }
+  /*con03 profileBottom  */
+  #con03 .profileBottom {
+    width: 100%;
+    display: block;
+    margin: 0rem auto;
+  }
+  /*con03 profileBottom  */
+  #con03 .profileBottom > li {
+    width: 80%;
+    margin: 0px auto;
+    margin-bottom: 2.5rem;
+  }
+  /*con03 profileBottom li career */
+  #con03 .profileBottom > li .career {
+    width: 35%;
+    right: -40px;
+    top: -35px;
+  }
+  /*con03 profileBottom li h3 */
+  #con03 .profileBottom > li h3 {
+    font-size: 5vw;
+
+    margin-bottom: 1.5rem;
+  }
+  /*con03 profileBottom li p */
+  #con03 .profileBottom > li p {
+    font-size: 3vw;
+    margin-bottom: 1rem;
+    margin-left: 60px;
+  }
+  /*con03 profileBottom li text01 */
+  #con03 .profileBottom > li .text01 {
+    margin-left: 90px;
+  }
+  /*con03 profileBottom li certificate */
+  #con03 .profileBottom > li .certificate {
+    width: 40%;
+    left: -50px;
+    top: -15px;
+  }
+  #con03 .modalCareer {
+    left: 15%;
+    top: 10%;
+    display: none;
+  }
+  #con03 .scrollBar {
+    width: 80%;
+
+    overflow-y: scroll;
+  }
 }
 @media (max-width: 550px) {
   /* con01 */
@@ -1476,6 +1888,12 @@ header .bar.on {
   #con01 .web img {
     width: 55%;
   }
+
+  /* con02 hi */
+  #con02 .right .hi {
+    right: 50px;
+    top: 40px;
+  }
 }
 @media (max-width: 400px) {
   /* con01 */
@@ -1508,6 +1926,16 @@ header .bar.on {
   }
   #con01 .web img {
     width: 55%;
+  }
+
+  /* con02 hi */
+  #con02 .right .hi {
+    right: 20px;
+    top: 60px;
+  }
+  /*con02 right imgBox   */
+  #con02 .right .imgBox {
+    width: 95%;
   }
 }
 @media (max-width: 350px) {
