--- a/css/style.css
+++ b/css/style.css
@@ -105,13 +105,14 @@ header .close {
 }
 
 /*con01*/
-.con01 {
+#con01 {
   width: 100%;
   height: 100vh;
 }
 /*con01 title  */
 #con01 .title {
   width: 100%;
+
   font-family: "PyeongChangPeace-Bold";
   text-align: center;
   position: relative;
@@ -215,7 +216,7 @@ header .close {
   border-radius: 50px;
   box-sizing: border-box;
   padding: 0rem 3rem;
-  margin: 0px auto;
+  margin: -50px auto;
 }
 #con01 .textBox p {
   font-size: 2vw;
@@ -231,7 +232,7 @@ header .close {
 
   justify-content: center;
   align-items: center;
-  margin-top: 55px;
+  margin-top: 80px;
 }
 #con01 .bottom .line02 {
   width: 70%;
@@ -244,19 +245,21 @@ header .close {
 }
 /* con02 */
 #con02 {
-  width: 90%;
+  width: 100%;
   height: 100vh;
-  padding-top: 2rem;
+  padding-top: 3.5rem;
+
   box-sizing: border-box;
   margin: 0px auto;
 }
 /*con02 .aboutWrap*/
 #con02 .aboutWrap {
-  width: 100%;
+  width: 90%;
+  height: 100%;
   display: flex;
   align-items: center;
-  padding-top: 4rem;
-  box-sizing: border-box;
+  justify-content: space-between;
+  margin: 20px auto;
 }
 /* con02 aboutWrap left */
 #con02 .aboutWrap .left {
@@ -272,7 +275,8 @@ header .close {
 }
 #con02 .left .aboutMe h2 {
   font-family: "PyeongChangPeace-Bold";
-  font-size: 9.2vw;
+  font-size: 9vw;
+  margin-left: 20px;
 }
 
 #con02 .left .aboutMe span {
@@ -315,7 +319,7 @@ header .close {
 /*con02 left textBox   */
 #con02 .left .textBox {
   width: 95%;
-  height: 25vh;
+  height: 30vh;
   border: 2px solid #222;
   padding: 1.5rem;
   box-sizing: border-box;
@@ -324,6 +328,10 @@ header .close {
   line-height: 1.5;
   letter-spacing: 2px;
   margin: 0px auto;
+}
+/*con02 left textBox   */
+#con02 .left .textBox .text {
+  word-break: keep-all;
 }
 /*con02 left blink  */
 #con02 .left .blink {
@@ -377,8 +385,8 @@ header .close {
 }
 /*con02 right imgBox   */
 #con02 .right .imgBox {
-  width: 90%;
-  height: 700px;
+  width: 80%;
+  height: 35vw;
 }
 #con02 .right .imgBox img {
   width: 100%;
@@ -389,7 +397,7 @@ header .close {
   width: 60%;
   position: absolute;
   left: -100px;
-  top: 350px;
+  top: 250px;
   animation: ani04 10s linear infinite;
 }
 @keyframes ani04 {
@@ -1232,10 +1240,11 @@ header .close {
   header .logo h1 {
     font-size: 2vw;
   }
-  /* con01 title */
-  #con01 .title {
-    transform: translateY(0px);
+  /*con01*/
+  #con01 {
+    height: 55vw;
   }
+
   #con01 .name {
     position: absolute;
 
@@ -1261,8 +1270,23 @@ header .close {
   #con01 .web img {
     width: 90%;
   }
+  /* con02 */
+  #con02 {
+    padding-top: 0rem;
+    background-color: #ddb0b4;
+  }
+  /*con02 .aboutWrap*/
   #con02 .aboutWrap {
-    padding-top: 6rem;
+    width: 100%;
+    background-color: #6edbb0;
+    padding: 5rem 2rem;
+    box-sizing: border-box;
+    margin-top: 0rem;
+  }
+
+  #con02 .left .aboutMe h2 {
+    font-size: 12vw;
+    margin-left: 30px;
   }
   /*  #con02 left aboutMe design*/
   #con02 .left .aboutMe .design {
@@ -1271,22 +1295,32 @@ header .close {
   }
   /*con02 left textBox   */
   #con02 .left .textBox {
-    width: 90%;
-    font-size: 1.5vw;
+    width: 100%;
+    font-size: 1.8vw;
+    height: 21vw;
   }
+  /*con02 right imgBox   */
+  #con02 .right .imgBox {
+    width: 100%;
+    height: 50vw;
+  }
+  /*con02 right imgBox   */
+  #con02 .right .imgBox img {
+    width: 100%;
+  }
+
   /* con02 right hi */
   #con02 .right .hi {
     width: 40%;
-    position: absolute;
-    right: -20px;
-    top: -10px;
+    right: 0px;
+    top: -30px;
   }
   /*  con02 right hello   */
   #con02 .right .hello {
     width: 60%;
-    position: absolute;
-    left: -100px;
-    top: 100px;
+
+    left: -90px;
+    top: 50%;
   }
   /* con03 */
   #con03 {
@@ -1359,12 +1393,37 @@ header .close {
     left: -50px;
     top: 10px;
   }
+  /* con04 illustration */
+  #con04 .illustration {
+    width: 40%;
+  }
+  /*#con04 bg03  */
+  #con04 .bg03 {
+    width: 20%;
+
+    right: -50px;
+    top: 10px;
+  }
+  /* con04 ilust01 li*/
+  #con04 .ilust01 > li {
+    width: 28%;
+    height: 50vh;
+  }
+  /* con04 ilustModal  ilust02*/
+  #con04 .ilustModal .ilust02 {
+    width: 40%;
+    height: 85vh;
+  }
 }
 @media (max-width: 950px) {
-  /* con01 title */
-  #con01 .title {
-    transform: translateY(0px);
+  header .modal_menu .mo_menu {
+    font-size: 4vw;
   }
+  /*con01*/
+  #con01 {
+    height: 65vh;
+  }
+
   #con01 .name {
     position: absolute;
 
@@ -1398,20 +1457,36 @@ header .close {
     width: 8%;
   }
   #con01 .bottom {
-    margin-top: 30px;
+    margin-top: 80px;
   }
+  /* con02 */
   #con02 {
-    width: 95%;
-    transform: translateY(0px);
+    width: 100%;
+    height: 70vw;
   }
-  #con02 .left .textBox .text {
-    font-size: 1.9vw;
+  /*con02 .aboutWrap*/
+  #con02 .aboutWrap {
+    padding: 6rem 1rem;
+    box-sizing: border-box;
+  }
+  /* con02 left aboutMe design */
+  #con02 .left .aboutMe .design {
+    width: 70%;
+    height: 130px;
+    left: 40%;
+    top: 50%;
+  }
+  /*con02 left textBox   */
+  #con02 .left .textBox {
+    height: 24vw;
+  }
+  #con02 .right .hello {
+    left: -50px;
   }
   /* con03 */
   #con03 {
     width: 100%;
     height: 700px;
-    background-color: #ddb0b4;
   }
   /*con03 profileTop*/
   #con03 .profileTop {
@@ -1464,6 +1539,25 @@ header .close {
   #con03 .profileBottom > li .certificate {
     width: 40%;
   }
+  /* con04 illustration */
+  #con04 .illustration {
+    width: 50%;
+  }
+  /*#con04 bg03  */
+  #con04 .bg03 {
+    right: -30px;
+    top: 10px;
+  }
+  /* con04 ilust01 li*/
+  #con04 .ilust01 > li {
+    width: 40%;
+    height: 50vh;
+  }
+  /* con04 ilustModal  ilust02*/
+  #con04 .ilustModal .ilust02 {
+    width: 50%;
+    height: 85vh;
+  }
 }
 @media (max-width: 800px) {
   /* header  */
@@ -1474,6 +1568,10 @@ header .close {
   /* header logo */
   header .logo h1 {
     font-size: 2.5vw;
+  }
+  /*con01*/
+  #con01 {
+    height: 60vw;
   }
   /*con01 title  */
   #con01 .title {
@@ -1500,7 +1598,7 @@ header .close {
   /* con01 web */
   #con01 .web {
     position: absolute;
-    left: 2%;
+    left: 5%;
     top: 75%;
   }
   #con01 .web img {
@@ -1517,23 +1615,26 @@ header .close {
     margin-left: 2rem;
     font-size: 2vw;
   }
+  /* con02 */
   #con02 {
-    transform: translateY(0px);
-    height: 1200px;
+    height: 150vw;
   }
 
   #con02 .left .textBox .text {
-    font-size: 2.3vw;
+    font-size: 2.6vw;
   }
 
   /*con02 .aboutWrap*/
   #con02 .aboutWrap {
     display: block;
+    padding-top: 3rem;
   }
+  /*con02 .aboutWrap h2*/
   #con02 .left .aboutMe h2 {
     font-size: 9.5vw;
     text-align: center;
-    transform: translateY(-30px);
+    margin-bottom: 3rem;
+    margin-left: 0rem;
   }
   #con02 .left .aboutMe span {
     display: inline-block;
@@ -1544,13 +1645,13 @@ header .close {
   }
   /*  con02 left aboutMe design */
   #con02 .left .aboutMe .design {
-    width: 40%;
-    position: absolute;
-    left: 30%;
-    top: 60%;
+    width: 50%;
+
+    left: 25%;
+    top: 65%;
   }
   #con02 .left .textBox {
-    height: 230px;
+    height: 28vw;
     font-size: 2vw;
     margin: 0px auto;
   }
@@ -1561,21 +1662,22 @@ header .close {
   /*con02 right */
   #con02 .right {
     width: 100%;
+    margin-top: 10px;
   }
   /* con02 hi */
   #con02 .right .hi {
-    width: 20%;
+    width: 25%;
     position: absolute;
-    right: 100px;
-    top: 0px;
+    right: 120px;
+    top: -30px;
   }
   /*con02 right imgBox   */
   #con02 .right .imgBox {
     width: 70%;
-    height: 500px;
+    height: 80vw;
     margin: 0px auto;
-    transform: translateY(50px);
   }
+  /*con02 .right .hello  */
   #con02 .right .hello {
     width: 35%;
     position: absolute;
@@ -1590,8 +1692,7 @@ header .close {
   /* con03 */
   #con03 {
     width: 100%;
-    height: 650px;
-    background-color: #ddb0b4;
+    height: 600px;
   }
   /*con03 bg  */
   #con03 .bg {
@@ -1659,10 +1760,44 @@ header .close {
   #con03 .profileBottom > li .certificate {
     width: 45%;
     left: -30px;
-    top: 20px;
+    top: 0px;
+  }
+  #con04 {
+    height: 700px;
+    background-color: #6edbb0;
+  }
+  /* con04 illustration */
+  #con04 .illustration {
+    width: 50%;
+  }
+  /*#con04 bg03  */
+  #con04 .bg03 {
+    right: -30px;
+    top: 10px;
+  }
+  /* con04 ilust01 li*/
+  #con04 .ilust01 > li {
+    width: 40%;
+    height: 40vh;
+  }
+  /* con04 ilustModal  ilust02*/
+  #con04 .ilustModal .ilust02 {
+    width: 50%;
+    height: 65vh;
   }
 }
+@media (max-width: 750px) {
+  #con03 {
+    height: 550px;
+  }
+  /* con03 .profileBottom > li .txtBox03 img  */
+  #con03 .profileBottom > li .txtBox03 img {
+    width: 20%;
 
+    right: 10%;
+    top: -200%;
+  }
+}
 @media (max-width: 600px) {
   /* header  */
   header {
@@ -1682,11 +1817,12 @@ header .close {
   header .bar {
     font-size: 4vw;
   }
-
-  /*con01 title  */
-  #con01 .title {
-    transform: translateY(0px);
-    height: 300px;
+  /*con01*/
+  #con01 {
+    height: 65vw;
+  }
+  #con01 .title h2 {
+    padding-top: 8rem;
   }
   /* con01 name */
   #con01 .name {
@@ -1709,7 +1845,7 @@ header .close {
   /* con01 web */
   #con01 .web {
     position: absolute;
-    left: -2%;
+    left: 5%;
     top: 75%;
   }
   #con01 .web img {
@@ -1724,7 +1860,7 @@ header .close {
   }
   /*con01 bottom   */
   #con01 .bottom {
-    margin-top: 30px;
+    margin-top: 80px;
   }
   #con01 .bottom p {
     margin-left: 2rem;
@@ -1732,26 +1868,33 @@ header .close {
   }
   /* con02 */
   #con02 {
-    transform: translateY(-50px);
-    height: 1100px;
+    height: 175vw;
   }
   /* con02 aboutWrap left */
   #con02 .aboutWrap .left {
-    padding: 1rem;
+    padding-top: 3rem;
+  }
+  #con02 .left .aboutMe h2 {
+    font-size: 12vw;
   }
   /* con02 left aboutMe design */
   #con02 .left .aboutMe .design {
-    width: 50%;
-    left: 25%;
-    top: 20%;
+    width: 60%;
+    left: 20%;
+    top: 70%;
   }
   /* con02 hi */
   #con02 .right .hi {
-    top: 30px;
+    right: 100px;
+    top: -30px;
+  }
+  /*con02 left textBox   */
+  #con02 .left .textBox {
+    height: 40vw;
   }
   /*con02 left textBox   */
   #con02 .left .textBox .text {
-    font-size: 2.8vw;
+    font-size: 3vw;
   }
   /*con02 bottom  p */
   #con02 .bottom p {
@@ -1761,7 +1904,7 @@ header .close {
 
   /* con03 */
   #con03 {
-    height: 1150px;
+    height: 180vw;
   }
   /* con03 profile */
   #con03 .profile {
@@ -1777,10 +1920,10 @@ header .close {
   #con03 .profileTop > li {
     width: 80%;
 
-    height: 25vh;
+    height: 28vh;
 
     padding: 1rem;
-    margin: 2.5rem auto;
+    margin: 2rem auto;
   }
   #con03 .profileTop > li h3 {
     font-size: 5vw;
@@ -1840,26 +1983,44 @@ header .close {
     left: -50px;
     top: -15px;
   }
+
+  /* 모달창 */
   #con03 .modalCareer {
-    left: 15%;
-    top: 10%;
+    left: 5%;
+    top: 35%;
     display: none;
   }
+
   #con03 .scrollBar {
-    width: 80%;
+    width: 90%;
 
     overflow-y: scroll;
   }
+  #con03 .modalCareer .close {
+    font-size: 6vw;
+  }
+  /* con04 illustration */
+  #con04 .illustration {
+    width: 50%;
+  }
+
+  /* con04 ilust01 li*/
+  #con04 .ilust01 > li {
+    width: 50%;
+    height: 40vh;
+  }
+  /* con04 ilustModal  ilust02*/
+  #con04 .ilustModal .ilust02 {
+    width: 60%;
+    height: 65vh;
+  }
 }
 @media (max-width: 550px) {
-  /* con01 */
   #con01 {
-    transform: translateY(-20px);
+    height: 65vw;
   }
-  /*con01 title  */
-  #con01 .title {
-    transform: translateY(0px);
-    height: 270px;
+  #con01 .title h2 {
+    padding-top: 7rem;
   }
   /* con01 name */
   #con01 .name {
@@ -1874,31 +2035,43 @@ header .close {
   #con01 .work {
     position: absolute;
     right: -10%;
-    top: 30%;
+    top: 25%;
   }
   #con01 .work img {
     width: 30%;
   }
-  /* con01 web */
+  /*con01 web */
   #con01 .web {
-    position: absolute;
-    left: -5%;
-    top: 75%;
+    top: 70%;
   }
   #con01 .web img {
     width: 55%;
   }
-
+  /*con01 bottom   */
+  #con01 .bottom {
+    margin-top: 70px;
+  }
+  #con02 .left .aboutMe h2 {
+    font-size: 9vw;
+  }
   /* con02 hi */
   #con02 .right .hi {
-    right: 50px;
-    top: 40px;
+    right: 70px;
+    top: -30px;
+  }
+  /*con02 .right .hello  */
+  #con02 .right .hello {
+    left: 50px;
+    top: 250px;
   }
 }
 @media (max-width: 400px) {
+  header .modal_menu .mo_menu {
+    font-size: 7vw;
+  }
   /* con01 */
   #con01 {
-    transform: translateY(-20px);
+    height: 65vw;
   }
   /* con01 name */
   #con01 .name {
@@ -1912,36 +2085,116 @@ header .close {
   /*con01 work  */
   #con01 .work {
     position: absolute;
-    right: -10%;
-    top: 30%;
+    right: -15%;
+    top: 25%;
   }
   #con01 .work img {
     width: 30%;
   }
   /* con01 web */
   #con01 .web {
-    position: absolute;
-    left: -5%;
-    top: 75%;
+    left: 20px;
+    top: 70%;
   }
   #con01 .web img {
-    width: 55%;
+    width: 70%;
   }
+  /* con02 */
+  #con02 {
+    height: 210vw;
+  }
+  /*con02 .aboutWrap*/
+  #con02 .aboutWrap {
+    padding-top: 2rem;
+  }
+  /* con02 left aboutMe design */
+  #con02 .left .aboutMe .design {
+    width: 70%;
+    height: 130px;
 
+    right: -10%;
+    top: 40%;
+  }
+  /*con02 .aboutWrap h2*/
+  #con02 .left .aboutMe h2 {
+    margin-bottom: 2rem;
+  }
   /* con02 hi */
   #con02 .right .hi {
+    width: 35%;
     right: 20px;
-    top: 60px;
+    top: -20px;
+  }
+  #con02 .left .textBox {
+    font-size: 3vw;
+    height: 50vw;
   }
   /*con02 right imgBox   */
   #con02 .right .imgBox {
     width: 95%;
+    height: 100vw;
+  }
+  /* con03 */
+  #con03 {
+    height: 950px;
+  }
+  /*con03 profileTop li*/
+  #con03 .profileTop > li {
+    padding: 1rem;
+  }
+  #con03 .profileTop > li h3 {
+    font-size: 7vw;
+
+    margin-bottom: 30px;
+  }
+  #con03 .profileTop > li h2 {
+    font-size: 7vw;
+  }
+  #con03 .profileTop > li p {
+    font-size: 2.7vw;
+    margin-left: 40px;
+  }
+  /* con03 profileTop > li education */
+  #con03 .profileTop > li .education {
+    left: -40px;
+  }
+  #con03 .profileTop > li:nth-child(2) > img {
+    width: 80%;
+    margin: 10px auto;
+  }
+  /*con03 profileBottom li h3 */
+  #con03 .profileBottom > li h3 {
+    font-size: 7vw;
+
+    margin-bottom: 0.5rem;
+  }
+  /*con03 profileBottom li p */
+  #con03 .profileBottom > li p {
+    font-size: 2.5vw;
+
+    margin-left: 50px;
+  }
+  /*con03 profileBottom li text01 */
+  #con03 .profileBottom > li .text01 {
+    margin-left: 80px;
+  }
+  /*con03 profileBottom li certificate */
+  #con03 .profileBottom > li .certificate {
+    left: -30px;
+    top: 10px;
+  }
+  /* con03 .profileBottom > li .txtBox03 img  */
+  #con03 .profileBottom > li .txtBox03 img {
+    width: 18%;
+    position: absolute;
+    right: 7%;
+    top: -500%;
   }
 }
 @media (max-width: 350px) {
   /* con01 */
   #con01 {
-    transform: translateY(-20px);
+    height: 70vw;
   }
   /* con01 name */
   #con01 .name {
@@ -1955,19 +2208,142 @@ header .close {
   /*con01 work  */
   #con01 .work {
     position: absolute;
-    right: -10%;
+    right: -25%;
     top: 30%;
   }
   #con01 .work img {
-    width: 30%;
+    width: 20%;
   }
   /* con01 web */
   #con01 .web {
     position: absolute;
-    left: -5%;
-    top: 75%;
+    left: 5%;
+    top: 65%;
   }
   #con01 .web img {
     width: 55%;
+  }
+  /* con02 */
+  #con02 {
+    height: 210vw;
+  }
+  /*con02 .aboutWrap*/
+  #con02 .aboutWrap {
+    padding-top: 1rem;
+  }
+  /* con02 aboutWrap left */
+  #con02 .aboutWrap .left {
+    width: 100%;
+    padding: 0rem;
+    box-sizing: border-box;
+  }
+  /* con02 left aboutMe design */
+  #con02 .left .aboutMe .design {
+    width: 70%;
+    height: 130px;
+
+    right: 0%;
+    top: -30%;
+  }
+  /*con02 .aboutWrap h2*/
+  #con02 .left .aboutMe h2 {
+    margin-bottom: 1rem;
+  }
+  /* con02 hi */
+  #con02 .right .hi {
+    width: 35%;
+    right: 20px;
+    top: -20px;
+  }
+  #con02 .left .textBox {
+    font-size: 5vw;
+    height: 65vw;
+    margin-bottom: 2rem;
+  }
+  /*con02 right imgBox   */
+  #con02 .right .imgBox {
+    width: 95%;
+    height: 100vw;
+  }
+  /*con02 .right .hello  */
+  #con02 .right .hello {
+    left: 50px;
+    top: 200px;
+  }
+  /* con03 */
+  #con03 {
+    height: 850px;
+  }
+  /*con03 profileTop li*/
+  #con03 .profileTop > li {
+    width: 90%;
+    padding: 1rem;
+    height: 22vh;
+  }
+  #con03 .profileTop > li h3 {
+    margin-bottom: 20px;
+  }
+  #con03 .profileTop > li p {
+    font-size: 3.2vw;
+    margin-left: 30px;
+  }
+  /* con03 profileTop > li education */
+  #con03 .profileTop > li .education {
+    left: -20px;
+    top: -35px;
+  }
+  /*con03 profileTop > li skill  */
+  #con03 .profileTop > li .skill {
+    right: -20px;
+    top: -30px;
+  }
+  /*con03 profileBottom  */
+  #con03 .profileBottom > li {
+    width: 90%;
+
+    height: 12vh;
+  }
+
+  /*con03 profileBottom li p */
+  #con03 .profileBottom > li p {
+    font-size: 3vw;
+
+    margin-left: 50px;
+  }
+  /*con03 profileBottom li text01 */
+  #con03 .profileBottom > li .text01 {
+    margin-left: 60px;
+  }
+  /*con03 profileBottom li career */
+  #con03 .profileBottom > li .career {
+    right: -16px;
+    top: -30px;
+  }
+  /*con03 profileBottom li certificate */
+  #con03 .profileBottom > li .certificate {
+    left: -20px;
+    top: 10px;
+  }
+  #con04 {
+    height: 650px;
+  }
+  /* con04 illustration */
+  #con04 .illustration {
+    width: 90%;
+  }
+  /*#con04 bg03  */
+  #con04 .bg03 {
+    right: -10px;
+    top: 10px;
+  }
+  /* con04 ilust01 li*/
+  #con04 .ilust01 > li {
+    width: 85%;
+    height: 35vh;
+  }
+  /* con04 ilustModal  ilust02*/
+  #con04 .ilustModal .ilust02 {
+    width: 85%;
+    height: 45vh;
   }
 }
