--- a/css/style.css
+++ b/css/style.css
@@ -1273,12 +1273,11 @@ header .close {
   /* con02 */
   #con02 {
     padding-top: 0rem;
-    background-color: #ddb0b4;
   }
   /*con02 .aboutWrap*/
   #con02 .aboutWrap {
     width: 100%;
-    background-color: #6edbb0;
+
     padding: 5rem 2rem;
     box-sizing: border-box;
     margin-top: 0rem;
@@ -1421,7 +1420,7 @@ header .close {
   }
   /*con01*/
   #con01 {
-    height: 65vh;
+    height: 55vh;
   }
 
   #con01 .name {
@@ -1819,7 +1818,7 @@ header .close {
   }
   /*con01*/
   #con01 {
-    height: 65vw;
+    height: 60vw;
   }
   #con01 .title h2 {
     padding-top: 8rem;
@@ -1868,11 +1867,11 @@ header .close {
   }
   /* con02 */
   #con02 {
-    height: 175vw;
+    height: 180vw;
   }
   /* con02 aboutWrap left */
   #con02 .aboutWrap .left {
-    padding-top: 3rem;
+    padding-top: 0rem;
   }
   #con02 .left .aboutMe h2 {
     font-size: 12vw;
@@ -1904,7 +1903,7 @@ header .close {
 
   /* con03 */
   #con03 {
-    height: 180vw;
+    height: 200vw;
   }
   /* con03 profile */
   #con03 .profile {
@@ -2017,7 +2016,7 @@ header .close {
 }
 @media (max-width: 550px) {
   #con01 {
-    height: 65vw;
+    height: 60vw;
   }
   #con01 .title h2 {
     padding-top: 7rem;
@@ -2064,6 +2063,43 @@ header .close {
     left: 50px;
     top: 250px;
   }
+  /* con03 */
+  #con03 {
+    height: 240vw;
+  }
+  /*con03 profileTop li*/
+  #con03 .profileTop > li {
+    width: 80%;
+    height: 22vh;
+  }
+}
+@media (max-width: 450px) {
+  /* con02 */
+  #con02 {
+    height: 170vw;
+  }
+  /* con02 aboutWrap left */
+  #con02 .aboutWrap .left {
+    padding-top: 1rem;
+  }
+  /* con02 left aboutMe design */
+  #con02 .left .aboutMe .design {
+    top: 30%;
+  }
+  /*con02 left textBox   */
+  #con02 .left .textBox {
+    height: 45vw;
+    margin-top: -20px;
+  }
+  /*con02 right imgBox   */
+  #con02 .right .imgBox {
+    margin-top: -10px;
+  }
+  /*con02 .right .hello  */
+  #con02 .right .hello {
+    left: 50px;
+    top: 200px;
+  }
 }
 @media (max-width: 400px) {
   header .modal_menu .mo_menu {
@@ -2071,7 +2107,10 @@ header .close {
   }
   /* con01 */
   #con01 {
-    height: 65vw;
+    height: 60vw;
+  }
+  #con01 .title h2 {
+    padding-top: 7rem;
   }
   /* con01 name */
   #con01 .name {
@@ -2101,19 +2140,19 @@ header .close {
   }
   /* con02 */
   #con02 {
-    height: 210vw;
+    height: 200vw;
   }
   /*con02 .aboutWrap*/
   #con02 .aboutWrap {
-    padding-top: 2rem;
+    padding-top: 4rem;
   }
   /* con02 left aboutMe design */
   #con02 .left .aboutMe .design {
     width: 70%;
     height: 130px;
 
-    right: -10%;
-    top: 40%;
+    right: -20%;
+    top: 30%;
   }
   /*con02 .aboutWrap h2*/
   #con02 .left .aboutMe h2 {
@@ -2126,17 +2165,20 @@ header .close {
     top: -20px;
   }
   #con02 .left .textBox {
+    width: 100%;
     font-size: 3vw;
     height: 50vw;
+    margin: 20px auto;
   }
   /*con02 right imgBox   */
   #con02 .right .imgBox {
+    margin-top: -40px;
     width: 95%;
     height: 100vw;
   }
   /* con03 */
   #con03 {
-    height: 950px;
+    height: 260vw;
   }
   /*con03 profileTop li*/
   #con03 .profileTop > li {
